---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "_empty",
        "type": {
          "kind": "array",
          "length": 0,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 32
          }
        },
        "visibility": "private"
      },
      {
        "name": "value_1",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "value_2",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "databus"
      }
    ],
    "return_type": null,
    "error_types": {
      "5019202896831570965": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _2",
    "private parameters indices : [_0, _1]",
    "public parameters indices : []",
    "return value indices : []",
    "BLACKBOX::RANGE [(_0, 32)] []",
    "BLACKBOX::RANGE [(_1, 32)] []",
    "EXPR [ (1, _0) (-1, _2) 1 ]",
    "BLACKBOX::RANGE [(_2, 32)] []",
    "EXPR [ (-1, _1) (1, _2) 0 ]",
    "INIT CALLDATA 0 (id: 1, len: 1, witnesses: [_1])"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": {
    "50": {
      "source": "fn main(_empty: [u32; 0], value_1: u32, value_2: call_data(0) u32) {\n    assert_eq(value_1 + 1, value_2);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
